fix(test): varargs 参数改用 thenAnswer 读实参，ArgumentCaptor 捕不到
CI 报 'Expecting ArrayList: [] to contain: [PARTIAL_SUCCESS]'。

真因：jdbcTemplate.query(sql, rowMapper, a, b, c) 是 varargs 重载，
ArgumentCaptor.capture() 放在 varargs 位置时只会捕获匹配那一次调用的
单个槽位，getAllValues() 实测拿到的是空列表——断言于是恒假。

改用 thenAnswer + inv.getArguments() 读展开后的完整实参数组。
这条坑与上轮「断言落在调用次数而非参数值」同源：
断言要落到会被改错的那个值上，前提是先确认自己真的拿到了那个值。

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>